[package]
name = "rust-maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
serde = { version = "1.0.178", features = ["derive"] }
serde-jsonlines = "0.4.0"
serde_json = "1.0.104"
