[package]
name = "rust-maelstrom"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.72"
crossbeam-channel = "0.5.8"
serde = { version = "1.0.178", features = ["derive"] }
serde-jsonlines = { version = "0.4.0", features = ["async"] }
tokio = { version = "1.29.1", features = ["full"] }
tokio-stream = "0.1.14"
